Fix styling for dash on iphone

--- a/src/Components/dashboard/Dashboard.scss
+++ b/src/Components/dashboard/Dashboard.scss
@@ -17,13 +17,13 @@
   position: absolute;
   font-size: 24px;
   font-weight: 600;
-  margin-top: 18vh;
+  margin-top: 11vh;
   margin-left: -16vw;
   color: $purple;
 }
 
 .myShows {
-    margin-top: 25vh;
+    margin-top: 18vh;
     margin-left: -12vw;
   }
 
