--- a/src/Components/shows/Shows.scss
+++ b/src/Components/shows/Shows.scss
@@ -42,9 +42,9 @@
 }
 
 .currBandBtn {
-    position: relative;
-    display: inline-block;
+    width: fit-content;
     padding: 4px 10px;
+    margin-left: 25vw;;
     
 }
 
